k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpha-prod-service
  namespace: alpha-prod
spec:
  selector:
    app: alpha-prod
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
