k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpha-prod-ingress
  namespace: alpha-prod
spec:
  ingressClassName: nginx
  rules:
    - host: alpha-prod.js.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alpha-prod-service
                port:
                  number: 80
